--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "appointments-client",
   "version": "0.1.0",
-  "homepage": "https://appointments-client.herokuapp.com/",
   "private": true,
-  "engines": {
-    "node": "18.7.0",
-    "npm": "8.15.0"
-  },
+  "homepage": "https://vintran93.github.io/appointments_client/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
@@ -31,6 +27,7 @@
     "react-scripts": "4.0.0",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "validator": "^13.1.17",
     "web-vitals": "^0.2.4"
@@ -40,9 +37,8 @@
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-prebuild": "echo This runs before Heroku installs dependencies.",
-    "heroku-postbuild": "echo This runs after Heroku installs dependencies, but before Heroku prunes and caches dependencies.",
-    "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies."
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +64,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
-    "redux-devtools-extension": "^2.13.9",
+    "gh-pages": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^28.0.0",
     "stylelint-csstree-validator": "^2.0.0",
